Updated the arima manual and automated for busy loc

--- a/ARIMA.ipynb
+++ b/ARIMA.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -103,6 +103,15 @@
     "# Summary :\n",
     "# Overall, this code reads multiple CSV files from the specified directory, \n",
     "# concatenates them into a single DataFrame, and then selects and keeps only the columns specified in interested_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('Fhb_tripdata_from-2022-01_to_2022-10.csv',index=False)"
    ]
   },
   {
@@ -23986,122 +23995,7 @@
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "def plot(df,x_feature_name,y_feature_name,title):\n",
-    "    \"\"\"\n",
-    "    This function takes two dataframes as input and plots the number of calls per day and per week.\n",
-    "\n",
-    "    Args:\n",
-    "    daily_df (pandas.DataFrame): A dataframe containing daily call data.\n",
-    "    weekly_df (pandas.DataFrame): A dataframe containing weekly call data.\n",
-    "\n",
-    "    Returns:\n",
-    "    None\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Create a subplot with two rows and one column\n",
-    "    # fig = make_subplots(rows=2, cols=1)\n",
-    "    fig = go.Figure()\n",
-    "    # Add a trace for daily calls\n",
-    "    fig.add_trace(\n",
-    "        go.Scatter(\n",
-    "            x=df[x_feature_name],\n",
-    "            y=df[y_feature_name],\n",
-    "            name=y_feature_name,\n",
-    "            mode='lines+markers'\n",
-    "        ))\n",
-    "\n",
-    " \n",
-    "\n",
-    "    # Update xaxis properties\n",
-    "    fig.update_xaxes(title_text='Date')\n",
-    "\n",
-    "    # Update yaxis properties\n",
-    "    fig.update_yaxes(title_text=y_feature_name)\n",
-    "\n",
-    "    # Update title and height\n",
-    "    fig.update_layout(\n",
-    "        title=f'{title}',\n",
-    "        height=500,\n",
-    "        width=1200\n",
-    "    )\n",
-    "\n",
-    "    # Show the plot\n",
-    "    fig.show()\n",
-    "\n",
-    "    # Write the plot to an HTML file\n",
-    "    # fig.write_html(f'Visualization/btc.html')\n",
-    "    \n",
-    "\n",
-    "def train_test_predicted_plot(df_train,\n",
-    "                              df_test,\n",
-    "                              x_feature ,\n",
-    "                              y_feature,\n",
-    "                              predicted, \n",
-    "                              model_name):\n",
-    "    \"\"\"\n",
-    "    Plots the training data, actual values, and forecasted values using Plotly.\n",
-    "\n",
-    "    Args:\n",
-    "        train (pd.Series): The training data.\n",
-    "        test (pd.Series): The actual values.\n",
-    "        predicted (pd.Series): The forecasted values.\n",
-    "        model_name (str): The name of the forecasting model.\n",
-    "\n",
-    "    Returns:\n",
-    "        None\n",
-    "    \"\"\"\n",
-    "  \n",
-    "\n",
-    "   \n",
-    "    # Create a subplot with two rows and one column\n",
-    "    fig = go.Figure()\n",
-    "\n",
-    "    fig.add_trace(\n",
-    "    go.Scatter(\n",
-    "        x=df_train[x_feature],\n",
-    "        y=df_train[y_feature],\n",
-    "        name='Training Data',\n",
-    "        mode='lines+markers'\n",
-    "    ))\n",
-    "\n",
-    "    # Add a trace for actual values\n",
-    "    fig.add_trace(\n",
-    "        go.Scatter(\n",
-    "            x=df_test[x_feature],\n",
-    "            y=df_test[y_feature],\n",
-    "            name='Actual Values',\n",
-    "            mode='lines+markers'\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "    # Add a trace for forecasted values\n",
-    "    fig.add_trace(\n",
-    "        go.Scatter(\n",
-    "            x=df_test[x_feature],\n",
-    "            y=forecast[y_feature],\n",
-    "            name=f'{model_name}',\n",
-    "            mode='lines+markers'\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "    # Update xaxis properties\n",
-    "    fig.update_xaxes(title_text='Time')\n",
-    "\n",
-    "    # Update yaxis properties\n",
-    "    fig.update_yaxes(title_text=y_feature)\n",
-    "\n",
-    "    # Update title and height\n",
-    "    fig.update_layout(\n",
-    "        title=f'Forecasting using {model_name}',\n",
-    "        height=500,\n",
-    "        width=1500\n",
-    "    )\n",
-    "\n",
-    "    # Save the plot as an HTML file\n",
-    "    fig.show()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
